convert to ejs project

--- a/views/pages/tictactoe.ejs
+++ b/views/pages/tictactoe.ejs
@@ -4,18 +4,18 @@
         <title>Tic Tac Toe</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap" rel="stylesheet">
-        <link href="css/global-style.css" rel="stylesheet">
-        <link href="css/header-style.css" rel="stylesheet">
-        <link href="css/header.mobile.style.css" rel="stylesheet">
-        <link href="css/header-tablet-style.css" rel="stylesheet">
-        <link href="css/main-style.css" rel="stylesheet">
-        <link href="css/main-mobile-style.css" rel="stylesheet">
-        <link href="css/main-tablet-style.css" rel="stylesheet">
+        <link href="../css/tictactoeStyles/global-style.css" rel="stylesheet">
+        <link href="../css/tictactoeStyles/header-style.css" rel="stylesheet">
+        <link href="../css/tictactoeStyles/header.mobile.style.css" rel="stylesheet">
+        <link href="../css/tictactoeStyles/header-tablet-style.css" rel="stylesheet">
+        <link href="../css/tictactoeStyles/main-style.css" rel="stylesheet">
+        <link href="../css/tictactoeStyles/main-mobile-style.css" rel="stylesheet">
+        <link href="../css/tictactoeStyles/main-tablet-style.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <div id="logo-container" class="center-content">
-                <img id="logo" src="assets/ticTacToe.png">
+                <img id="logo" src="../assets/ticTacToe.png">
             </div>
         </header>
         <main>
