converted to ejs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,7 @@
         <link href="../css/indexStyles/index-style.css" rel="stylesheet">
     </head>
     <body style="margin: 0 auto;">
+        <div></div>
         <main class="center-content">
             <div id="logo-player-button-container">
                 <div id="logo-container" class="center-content">
