--- a/public/views/layout.ejs
+++ b/public/views/layout.ejs
@@ -6,47 +6,26 @@
         <link href="css/global.css" rel="stylesheet" type="text/css"/>
     </head>
     <body style="margin:0 auto;">
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+
+            const URL = "http://localhost:3000";
+            const socket = io(URL,{ autoConnect: false});
+
+            // reconnection
+            function load(){
+                console.log('load'+window.location.pathname);
+                const session= localStorage.getItem('sessionID');
+                console.log(session);
+                if(session){
+                    socket.auth={session}
+                    socket.connect();
+                }
+            }
+            load();
+ 
+        </script>
         <%- body %>
     </body>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-
-        const URL = "http://localhost:3000";
-        const socket = io(URL,{ autoConnect: false});
-
-        // reconnection
-        function load(){
-            console.log('load');
-            const session= localStorage.getItem('sessionID');
-            console.log(session);
-            if(session){
-
-                socket.auth={session}
-                socket.connect();
-                
-            }
-        }
-
-        load();
-        socket.on('session2',({msg})=>{
-            alert('what2');
-            alert('~msg2');
-            // console.log('~msg:'+msg);
-        });
-        socket.on('session',({sessionID,userID,username})=>{
-            alert('what');
-            socket.auth={ sessionID };
-            document.cookie='sessionID='+sessionID;
-            socket.userID={ userID };
-            socket.username={ username };
-
-            const url = window.location.pathname;
-            if(url == '/'){
-                window.location.href = '/other';
-            }
-
-            console.log('how many');
-        });
-        
-    </script>
 </html>
+
