tictactoe room styles complete

--- a/public/views/layout.ejs
+++ b/public/views/layout.ejs
@@ -3,6 +3,7 @@
     <head>
         <title>LAYOUTS</title>
         <link href="css/tictactoe-main.css" rel="stylesheet" type="text/css"/>
+        <link href="css/tictactoe-room.css" rel="stylesheet" type="text/css"/>
         <link href="css/global.css" rel="stylesheet" type="text/css"/>
     </head>
     <body style="margin:0 auto;">
