--- a/public/css/tictactoe-main.css
+++ b/public/css/tictactoe-main.css
@@ -3,28 +3,90 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
-/* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
-
+#form-container{
+    width: 100%;
+    margin-top: 20px;
 }
-
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-
+#form{
+    width:100%;
 }
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-
+#username-container{
+    margin-bottom: 10px;
 }
-
-/* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-
+#username{
+    width:200px; height: 30px;
+    font-size: 18px;
 }
-
-/* XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {
-
+#find-player-btn{
+    width:100px; height: 40px;
+    font-size: 14px;
+    background-color: white;
+    border: none;
+}
+#find-player-btn:hover{
+    cursor: pointer;
+}
+/* Mobile phones */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #logo-container{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #logo{
+        width:400px; height: 150px;
+    }
+    #logo-container{
+        margin-bottom: 40px;
+    }
+    #username-container{
+        margin-bottom: 40px;
+    }
+    #username{
+        width:300px; height: 60px;
+        font-size: 40px;
+    }
+    #find-player-btn{
+        width:200px; height: 80px;
+        font-size: 30px;
+        background-color: white;
+        border: none;
+    }
+  }
+  /* Tablet */
+@media only screen 
+and (min-device-width: 768px) 
+and (max-device-width: 1024px) 
+and (-webkit-min-device-pixel-ratio: 1) {
+    #logo-container{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #logo{
+        width:400px; height: 150px;
+    }
+    #logo-container{
+        margin-bottom: 40px;
+    }
+    #username-container{
+        margin-bottom: 40px;
+    }
+    #username{
+        width:300px; height: 60px;
+        font-size: 40px;
+    }
+    #find-player-btn{
+        width:200px; height: 80px;
+        font-size: 30px;
+        background-color: white;
+        border: none;
+    }
 }
