--- a/public/css/tictactoe-room.css
+++ b/public/css/tictactoe-room.css
@@ -1,3 +1,39 @@
+#wait-player-choose-turn-prompt-container{
+    width:100vw; height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    top: 0px;
+    font-size: 72px;
+    color:rgb(0, 0, 0);
+}
+#searching-for-player-container{
+    width:100vw; height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    top: 0px;
+    font-size: 72px;
+    color:rgb(9, 255, 0);
+}
+#player-turn-prompt-container{
+    width:100vw; height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    top: 0px;
+    font-size: 72px;
+    color:rgb(9, 255, 0);
+}
 #mobile-players-details{
     display:none;
 }
@@ -68,6 +104,14 @@
     height: 100%;
     background-color: rgb(255, 255, 255);
     outline:1px solid black;
+}
+#title-prompt-container{
+    font-size: 42px;
+    color: black;
+}
+/* modal */
+#first-turn-btn,#second-turn-btn{
+    font-size: 24px;
 }
 /* screen transition tictactoe board smaller */
 @media (max-width: 992px) {
