--- a/public/views/layout.ejs
+++ b/public/views/layout.ejs
@@ -5,11 +5,17 @@
         <link href="css/tictactoe-main.css" rel="stylesheet" type="text/css"/>
         <link href="css/tictactoe-room.css" rel="stylesheet" type="text/css"/>
         <link href="css/global.css" rel="stylesheet" type="text/css"/>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
     <body style="margin:0 auto;">
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      
         <script src="/socket.io/socket.io.js"></script>
         <script>
-
             const URL = "http://localhost:3000";
             const socket = io(URL,{ autoConnect: false});
 
@@ -29,4 +35,5 @@
         <%- body %>
     </body>
 </html>
+
 
