--- a/public/css/tictactoe-room.css
+++ b/public/css/tictactoe-room.css
@@ -13,7 +13,7 @@
     position: relative;
     top:0px;
 }
-#winner-player-container{
+#rematch-container{
     width:100vw; height: 100vh;
     display: flex;
     justify-content: center;
@@ -24,6 +24,18 @@
     top: 0px;
     font-size: 72px;
     color:rgb(0, 0, 0);
+}
+#winner-player-container{
+    /* width:100vw; height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    top: 0px;
+    font-size: 72px;
+    color:rgb(0, 0, 0); */
 }
 #wait-player-choose-turn-prompt-container{
     width:100vw; height: 100vh;
